<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Quiz app</string>
    <string name="titleText">Cars Quiz</string>
    <string name="startButtonText">START</string>
    <string name="name_editText">Name:</string>
    <string name="question_editTextHint">Type in:</string>
    <string name="first_question">1. What brand is this car?</string>
    <string name="first_question_1RadioButton">BMW</string>
    <string name="first_question_2RadioButton">Mercedes</string>
    <string name="first_question_3RadioButton">Tesla</string>
    <string name="first_question_4RadioButton">Ferrari</string>
    <string name="second_question">2. What BMW model is this?</string>
    <string name="second_question_radioButton1">7 Series</string>
    <string name="second_question_radioButton2">i8</string>
    <string name="second_question_radioButton3">5 Series</string>
    <string name="second_question_radioButton4">i3</string>
    <string name="third_question">3. What brand does this emblem represent?</string>
    <string name="fourth_question">4. What is the well known car brand manufactured in Italy?</string>
    <string name="fifth_question">5. What brand is this car and where is it manufactured?</string>
    <string name="fifth_question_1CheckBox">Rolls Royce</string>
    <string name="fifth_question_2CheckBox">Bentley</string>
    <string name="fifth_question_3CheckBox">Manufactured in England</string>
    <string name="fifth_question_4CheckBox">Manufactured in Germany</string>
    <string name="sixth_question">6. What brand and model is this car?</string>
    <string name="sixth_question_1CheckBox">Porsche</string>
    <string name="sixth_question_2CheckBox">Audi</string>
    <string name="sixth_question_3CheckBox">i8</string>
    <string name="sixth_question_4CheckBox">R8</string>
    <string name="seventh_question">7. What brand is this car?</string>
    <string name="seventh_question_1RadioButton">Bugatti</string>
    <string name="seventh_question_2RadioButton">Ferrari</string>
    <string name="seventh_question_3RadioButton">Maserati</string>
    <string name="seventh_question_4RadioButton">Lamborghini</string>
    <string name="eighth_question">8. What brand and type is this car?</string>
    <string name="eighth_question_1CheckBox">Range Rover</string>
    <string name="eighth_question_2CheckBox">Volvo</string>
    <string name="eighth_question_3CheckBox">Sport</string>
    <string name="eighth_question_4CheckBox">SUV</string>
    <string name="checkAnswersButtonText">CHECK ANSWERS</string>
    <string name="shareButton">SHARE</string>
    <string name="repeatButton">REPEAT</string>
    <string name="congratsToastMessage">Congratulations, %1$s! Your score is %2$d out of 8. Well done!</string>
    <string name="tryAgainToastMessage">%1$s you failed. Your score is %2$d out of 8. Try again!</string>

</resources>
