<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            android:src="@drawable/background" />

        <EditText
            android:id="@+id/name_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="@dimen/editText_margin_top"
            android:backgroundTint="@android:color/white"
            android:hint="@string/name_editText"
            android:inputType="textCapWords"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/titleMarginTop"
            android:text="@string/titleText"
            android:textColor="@color/titleTextColor"
            android:textSize="@dimen/titleTextSize"
            android:textStyle="italic" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/main_img" />

        <Button
            android:onClick="startQuiz"
            android:id="@+id/start_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="50dp"
            android:background="@color/startButtonColor"
            android:text="@string/startButtonText"
            android:textColor="@android:color/white"
            android:textSize="@dimen/startButtonTextSize"
            android:textStyle="italic" />

    </RelativeLayout>
</ScrollView>